--- a/src/assets/styles/Products.css
+++ b/src/assets/styles/Products.css
@@ -27,6 +27,27 @@
 }
 /*Vidi kaj marginot*/
 
+#editbtn{
+    width: 30px;
+    height: 30px;
+    background: #fff;
+    border: 1px solid lightgray;
+    outline: none;
+    cursor: pointer;
+    font-size: 18px;
+    margin-right: 5px;
+}
+
+#delbtn{
+    width: 30px;
+    height: 30px;
+    background-color: #fff;
+    border: 1px solid lightgray;
+    outline: none;
+    cursor: pointer;
+    font-size: 18px;
+}
+
 .tit {
     display: flex;
     align-items: center;
