--- a/src/assets/styles/shared.css
+++ b/src/assets/styles/shared.css
@@ -1,15 +1,15 @@
+/* align-items: center; */
+/* overflow: hidden; */
 html,body {
-    /* width: 100%; */
+    width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
-    /* font-family: 'Roboto', sans-serif; */
+    font-family: 'Roboto', sans-serif;
     background-color: #E5EDF5;
     display: flex;
     align-content: center;
-    /* align-items: center; */
     justify-content: center; 
-    /* overflow: hidden; */
 }
 
 
@@ -42,7 +42,6 @@ html,body {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    
     box-sizing: border-box;
     /* overflow-x: hidden; */
     /* width: 420px; */
@@ -100,14 +99,16 @@ html,body {
     padding: 20px 0px 0px 0px;
 }
 
-#header {
+
+
+/* #header {
     width: 100%;
     height: 80px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 10px 40px 10px 40px;
-    position: fixed; /*sticky*/
+    position: fixed;  
     top: 0;
     background: #fff;
     box-sizing: border-box;
@@ -117,23 +118,25 @@ html,body {
 #mainnav  {
     display: flex;
     align-items: center;
-}
+} */
 
-#mainnav #bthome {
+/* background-color: #576574 ; */
+/* border: 2px solid #576574; */
+/* #mainnav #bthome {
     font-size: 15px;
     font-weight: bold;
-    /* border: 2px solid #576574; */
+    
     color: #576574;
     border-radius: 5px;
-    /* background-color: #576574 ; */
+    
     margin-right: 30px;
     height: 40px;
     width: 80px;
     outline: none;
     cursor: pointer;
-}
+} */
 
-
+/* border: 1px solid orange; */
 .orangeButton{
     font-size: 15px;
     font-weight: bold;
@@ -142,12 +145,13 @@ html,body {
     color: white;
     border-radius: 5px;
     margin-right: 15px;
-    /* border: 1px solid orange; */
+    
     width: 110px;
     height: 40px;
     cursor: pointer;
   }
   
+  /* border: 5px solid orange; */
 .whiteButton{
     font-size: 15px;
     font-weight: bold;
@@ -156,30 +160,33 @@ html,body {
     color: black;
     border-radius: 5px;
     margin-right: 0px;
-    /* border: 5px solid orange; */
+    
     width: 110px;
     height: 40px;
     cursor: pointer;
   }
 
-.user {
+/* .user {
     display: flex;
     align-items: center;
-}
-.user img {
+} */
+
+/* margin-left: auto; */
+/* .user img {
     width: 40px;
     height: 40px;
     border-radius: 50px;
-    /* margin-left: auto; */
-}
+    
+} */
 
-.user h2 {
+/* margin-right: 30px; */
+/* .user h2 {
     font-size: 18px;
     color: #4D4D4D;
     margin-left: 15px;
-    /* margin-right: 30px; */
+    
     white-space: nowrap;
-}
+} */
 
 #testTitle{
     display: flex;
@@ -188,6 +195,7 @@ html,body {
     color: blue;
     margin: 5px 0;
 }
+
 #testing{
     color: red;
     background-color: blue;
