--- a/src/assets/styles/Products.css
+++ b/src/assets/styles/Products.css
@@ -126,6 +126,7 @@
 
 #mainonebtn #btnnewproduct {
     font-size: 14px;
+    font-weight: 600;
     text-align: center;
     display:inline-block;
     /* font-weight: 600; */
