--- a/src/assets/styles/DeleteBox.css
+++ b/src/assets/styles/DeleteBox.css
@@ -66,6 +66,7 @@
 
 #delbox #cancel, #delete {
     font-size: 15px;
+    font-weight: 600;
     color: #576574;
     background-color: #fff;
     border: none;
