--- a/src/assets/styles/Expenses.css
+++ b/src/assets/styles/Expenses.css
@@ -75,12 +75,12 @@
     /* margin-right: 720px; */
 }
 
-#btnmonth, #btnyear  {
+/* margin: 0px 0 0 95px; */
+/* #btnmonth, #btnyear  {
     height: 45px;
     width: 150px;
     text-align: center;
     display: inline-block;
-    /* margin: 0px 0 0 95px; */
     border-radius: 5px;
     background-color: #1DD1A1;
     Box-shadow: 
@@ -96,6 +96,26 @@
 #btnyear {
     margin-left: 0px;
     background-color: #C9E5DD;
+} */
+
+.tab-btn {
+    width: 120px;
+    height: 50px;
+    border: 0;
+    border-radius: 5px;
+    background: #C9E5DD;
+    color: #fff;
+    font-size: 15px;
+    font-weight: bold;
+    outline: 0;
+}
+
+.active-tab-btn {
+    background: #1DD1A1;
+    color: #fff;
+    font-size: 15px;
+    font-weight: bold;
+    outline: 0;
 }
 
 
