--- a/src/assets/styles/NewProduct.css
+++ b/src/assets/styles/NewProduct.css
@@ -40,7 +40,7 @@
     align-items: center; /* check*/
     justify-content: center; /*check*/
     flex-wrap: wrap;
-    width: 75%;
+    width: 73%;
     height: 650px;
     margin: 0 auto 20px 5%;
     box-sizing: border-box;
@@ -54,7 +54,7 @@
     display: flex; 
     align-items: center;
     justify-content: flex-start; /*flex-start*/
-    width: 55%;
+    width: 53%;
     height: 100%;
     background-color: #fff;
     box-sizing: border-box;
@@ -94,7 +94,7 @@
 
 
 .cp-button {
-    width: 350px;
+    width: 370px;
     height: 50px;
     font-size: 15px;
     font-weight: 600;
@@ -108,10 +108,11 @@
     border: none;
     outline: none;
     cursor: pointer;
+    padding: 0px;
 }
 
 #right-page {
-    width: 45%;
+    width: 47%;
     height: 100%;
     display: flex;
     flex-direction: column;
