--- a/src/assets/styles/Expenses.css
+++ b/src/assets/styles/Expenses.css
@@ -98,7 +98,7 @@
     background-color: #C9E5DD;
 } */
 
-.tab-btn {
+.mY-btn {
     width: 120px;
     height: 50px;
     border: 0;
@@ -108,9 +108,10 @@
     font-size: 15px;
     font-weight: bold;
     outline: 0;
+    margin-right: 5px;
 }
 
-.active-tab-btn {
+.active-mY-btn {
     background: #1DD1A1;
     color: #fff;
     font-size: 15px;
