--- a/src/assets/styles/NewProduct.css
+++ b/src/assets/styles/NewProduct.css
@@ -80,7 +80,8 @@
 }
 
 .nptextfield {
-    width: 100%;
+    /* width: 100%; */
+    width: 370px;
     height: 35px;
     font-size: 15px;
     border: 2px solid #C6C6C6;
@@ -92,14 +93,40 @@
     text-align:center;
 }
 
+#btnsNp{
+    display: flex;
+    flex-direction: row;
+    /* align-items: center;
+    justify-content: center;
+    align-content: center; */
+}
 
 .cp-button {
-    width: 370px;
+    width: 180px;
     height: 50px;
     font-size: 15px;
     font-weight: 600;
     color: #fff;
     background-color: #1DD1A1;
+    Box-shadow: 
+    0px 0px 16px  rgba(0, 0, 0, 0.17);
+    border-radius: 5px;
+    margin-top: 30px;
+    display: inline-block;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 0px;
+    margin-right: 10px;
+}
+
+.cl-button {
+    width: 180px;
+    height: 50px;
+    font-size: 15px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #6d6d6d;
     Box-shadow: 
     0px 0px 16px  rgba(0, 0, 0, 0.17);
     border-radius: 5px;
