--- a/src/assets/styles/Expenses.css
+++ b/src/assets/styles/Expenses.css
@@ -54,16 +54,20 @@
 
 
 
-#experiod #months {
+#experiod #years {
     display: flex;
+    /* align-content: center; */
     align-items: center;
+    margin: 0px;
+    /* flex-direction: row;
+    background-color: red; */
 }
 
 #experiod #select {
     display: flex;
     align-items: center;
     height: 35px;
-    width: 150px;
+    width: 170px;
     font-size: 16px;
     padding-left: 10px;
     color: #8D8D8D;
@@ -99,7 +103,7 @@
 } */
 
 .mY-btn {
-    width: 120px;
+    width: 140px;
     height: 50px;
     border: 0;
     border-radius: 5px;
@@ -109,6 +113,7 @@
     font-weight: bold;
     outline: 0;
     margin-right: 5px;
+    cursor: pointer;
 }
 
 .active-mY-btn {
@@ -117,6 +122,7 @@
     font-size: 15px;
     font-weight: bold;
     outline: 0;
+    /* cursor: pointer; */
 }
 
 
@@ -133,7 +139,7 @@
     color: #000000;
 }
 
-#emaintitle select {
+/* #emaintitle select {
     height: 35px;
     width: 160px;
     font-size: 16px;
@@ -143,7 +149,7 @@
     border: 2px solid #C6C6C6;
     border-radius: 5px;
     margin-left: 10px;
-}
+} */
 
 #emaintable {
     width: 90%;
