--- a/src/assets/styles/EditProduct.css
+++ b/src/assets/styles/EditProduct.css
@@ -1,56 +1,107 @@
-
-#ep-main-container{
-   width: 100px;
-
-   
-}
+/* newproducts - flex container -parent element */
 
 
-.edit-container {
-    position: fixed;
-    top: 15%;
-    bottom: 15%;
-    left: 35%;
-    width: 30%;
-    height: 70%;
-    /* background-color: rgb(11, 45, 78); */
-    background-color: #fff;
-    padding: 25px 50px;
-    /* border: 1px solid grey; */
+
+#newproducts {
+    width: 100%;
+    height: 100%;
+    font-family: 'Roboto', sans-serif;
     display: flex;
-    flex-direction: column;
     justify-content: center;
+    /* align-items: center;      */
+    flex-wrap: wrap;
+    align-content: center;
+}
+
+#npmain-container {
+    width: 97%;
+    height: calc(100% - 170px);
+    /* padding-right: 120px; */
+    /* padding-left: 120px; */
+}
+
+#npmaintitle  {
+    width: 90%;
+    display: flex;
+    /* justify-content: space-between; */
     align-items: center;
-    /* overflow-x: hidden; */
-    /* box-sizing: border-box; */
+    margin: 20px auto 20px auto;
 }
 
-/* .text-field-label {
-    font-size: 16px;
-    color: black; 
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 500;
+#npmaintitle h1 {
+    font-size: 22px;
+    font-weight: bold;
+    color: #000000;
 }
 
-.text-field-input {
-    text-align: center;
-    font-size: 16px;
-    color: black;
-    width: 370px;
-    height: 35px;
+
+.form-container {
+    display: flex;
+    align-items: center; /* check*/
+    justify-content: center; /*check*/
+    flex-wrap: wrap;
+    width: 73%;
+    height: 650px;
+    margin: 0 auto 20px 5%;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    /* height: 450px; */
+    /* padding: 40px 120px 40px 40px; */
+    }
+
+
+#fpage {
+    display: flex; 
+    align-items: center;
+    justify-content: flex-start; /*flex-start*/
+    width: 53%;
+    height: 100%;
     background-color: #fff;
-    border: 2px solid;
-    border-color:  #C6C6C6;
-    border-radius:  5px;
-    margin-top: 7px;
+    box-sizing: border-box;
+    padding: 0px 0px 0px 50px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    overflow-x: hidden;
+}
+
+/* .input-container {
+    width: 100%;
 } */
 
-#btnsSC{
-    display: flex;
-    flex-direction: row;
+
+
+.nplabel {
+    width: 100%;
+    font-size: 18px;
+    color: #8d8d8d;
+    margin-top: 4px;
+    margin-bottom: 6px;
+    display: inline-block;
 }
 
-.sS-btn {
+.nptextfield {
+    /* width: 100%; */
+    width: 370px;
+    height: 35px;
+    font-size: 15px;
+    border: 2px solid #C6C6C6;
+    outline: none;
+    background-color: #fff;
+    border-radius: 5px;
+    display: block;
+    /* flex-wrap: wrap; */
+    text-align:center;
+}
+
+#btnsNp{
+    display: flex;
+    flex-direction: row;
+    /* align-items: center;
+    justify-content: center;
+    align-content: center; */
+}
+
+.cp-button {
     width: 180px;
     height: 50px;
     font-size: 15px;
@@ -69,7 +120,7 @@
     margin-right: 10px;
 }
 
-.cls-btn {
+.cl-button {
     width: 180px;
     height: 50px;
     font-size: 15px;
@@ -85,4 +136,33 @@
     outline: none;
     cursor: pointer;
     padding: 0px;
+}
+
+#right-page {
+    width: 47%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    background-color: rgb(230, 230, 230);
+    color: #8d8d8d;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    /* box-sizing: border-box; */
+    overflow-x: hidden;
+}
+
+
+#right-page #simbol {
+    display: inline-block;
+    margin: 0px 0px 0px 0px;
+    font-size: 40px;
+}
+
+#right-page #title {
+    display: inline-block;
+    margin: 15px 0px 0px 0px;
+    font-size: 18px;
 }
