--- a/src/assets/styles/NewProduct.css
+++ b/src/assets/styles/NewProduct.css
@@ -96,6 +96,8 @@
 #btnsNp{
     display: flex;
     flex-direction: row;
+    width: 374px;
+    margin: 0px;
     /* align-items: center;
     justify-content: center;
     align-content: center; */
@@ -117,7 +119,7 @@
     outline: none;
     cursor: pointer;
     padding: 0px;
-    margin-right: 10px;
+    margin-right: 14px;
 }
 
 .cl-button {
