--- a/src/assets/styles/Expenses.css
+++ b/src/assets/styles/Expenses.css
@@ -79,6 +79,24 @@
     /* margin-right: 720px; */
 }
 
+#experiod #start {
+    display: flex;
+    align-items: center;
+    height: 31px;
+    width: 156px;
+    font-size: 16px;
+    padding-left: 10px;
+    color: #8D8D8D;
+    background-color: #fff;
+    border: 2px solid #C6C6C6;
+    outline: none;
+    border-radius: 5px;
+    margin-left: 20px;
+    /* margin-right: 720px; */
+}
+
+
+
 /* margin: 0px 0 0 95px; */
 /* #btnmonth, #btnyear  {
     height: 45px;
