--- a/src/assets/styles/EditProduct.css
+++ b/src/assets/styles/EditProduct.css
@@ -90,7 +90,7 @@
     border-radius: 5px;
     display: block;
     /* flex-wrap: wrap; */
-    text-align:center;
+    text-align: left;
 }
 
 #btnsNp{
