--- a/src/assets/styles/NewProduct.css
+++ b/src/assets/styles/NewProduct.css
@@ -90,7 +90,8 @@
     border-radius: 5px;
     display: block;
     /* flex-wrap: wrap; */
-    text-align:center;
+    text-align:left;
+    padding-left: 5px;
 }
 
 #btnsNp{
