--- a/src/assets/styles/Navbar.css
+++ b/src/assets/styles/Navbar.css
@@ -1,15 +1,14 @@
-
 #header {
-    width: 100%;
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 40px 10px 40px;
-    position: fixed;
-    top: 0;
-    background: #fff;
-    box-sizing: border-box;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 40px 10px 40px;
+  position: fixed;
+  top: 0;
+  background: #fff;
+  box-sizing: border-box;
 }
 
 /* #mainnav  {
@@ -18,19 +17,19 @@
 } */
 
 #mainnav #bthome {
-    font-size: 15px;
-    font-weight: bold;
-    border: 2px solid #576574;
-    color: #576574;
-    border-radius: 5px;
-    /* background-color: #576574 ; */
-    margin-right: 30px;
-    height: 40px;
-    width: 80px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    outline: none;
-    cursor: pointer;
+  font-size: 15px;
+  font-weight: bold;
+  border: 2px solid #576574;
+  color: #576574;
+  border-radius: 5px;
+  /* background-color: #576574 ; */
+  margin-right: 30px;
+  height: 40px;
+  width: 80px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  outline: none;
+  cursor: pointer;
 }
 
 /* #mainnav #btproducts, #btexpenses{
@@ -46,7 +45,7 @@
     cursor: pointer;
   } */
 
-  /* #mainnav #btproducts{
+/* #mainnav #btproducts{
     font-size: 15px;
     font-weight: bold;
     border: 1.5px solid #576574;
@@ -72,48 +71,49 @@
     cursor: pointer;
   } */
 
-  .navbar-button {
-    width: 120px;
-    height: 40px;
-    font-size: 15px;
-    font-weight: bold;
-    background: transparent;
-    border: 2px solid;
-    border-color: #576574;
-    border-radius: 5px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-right: 15px;
-    outline: 0;
-    cursor: pointer;
+.navbar-button {
+  width: 120px;
+  height: 40px;
+  font-size: 15px;
+  font-weight: bold;
+  background: transparent;
+  border: 2px solid;
+  border-color: #576574;
+  border-radius: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-right: 15px;
+  outline: 0;
+  cursor: pointer;
 }
 .active {
-    color: #1DD1A1;
-    border-color: #1DD1A1;
+  color: #1dd1a1;
+  border-color: #1dd1a1;
 }
 
-
-
-
-
-
-  
-
-  .user {
-    display: flex;
-    align-items: center;
+#user {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+  background-color: red;
+  margin: 0px;
+  padding: 0px;
 }
-.user img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50px;
-    /* margin-left: auto; */
+#user img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  /* margin-right: 10px; */
+  /* margin-left: auto; */
 }
 
-.user h2 {
-    font-size: 18px;
-    color: #4D4D4D;
-    margin-left: 15px;
-    /* margin-right: 30px; */
-    white-space: nowrap;
+#user h2 {
+  font-size: 18px;
+  color: #4d4d4d;
+  margin-left: 15px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  /* margin-right: 30px; */
+  white-space: nowrap;
 }
