ExCalcFP-React-FinInProgress-21

--- a/src/assets/styles/ProductsNew.css
+++ b/src/assets/styles/ProductsNew.css
@@ -1,121 +1,118 @@
-
-
 /* products - flex container -parent element */
 #products {
-    width: 100%;
-    height: 100%;
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    justify-content: center;
-    /* align-items: center;      */
-    flex-wrap: wrap;
-    align-content: center;
+  width: 100%;
+  height: 100%;
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  justify-content: center;
+  /* align-items: center;      */
+  flex-wrap: wrap;
+  align-content: center;
 }
 
 .prmain-container {
-    width: 97%;
-    height: calc(100% - 170px);
+  width: 97%;
+  height: calc(100% - 170px);
 }
 
 /*Vidi kaj marginot*/
-#pmaintitle  {
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 20px auto -10px auto;
+#pmaintitle {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px auto -10px auto;
 }
 /*Vidi kaj marginot*/
 
-#editbtn{
-    width: 30px;
-    height: 30px;
-    background: #fff;
-    border: 1px solid lightgray;
-    outline: none;
-    cursor: pointer;
-    font-size: 18px;
-    margin-right: 5px;
+#editbtn {
+  width: 30px;
+  height: 30px;
+  background: #fff;
+  border: 1px solid lightgray;
+  outline: none;
+  cursor: pointer;
+  font-size: 18px;
+  margin-right: 5px;
 }
 
-#delbtn{
-    width: 30px;
-    height: 30px;
-    background-color: #fff;
-    border: 1px solid lightgray;
-    outline: none;
-    cursor: pointer;
-    font-size: 18px;
+#delbtn {
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border: 1px solid lightgray;
+  outline: none;
+  cursor: pointer;
+  font-size: 18px;
 }
 
 .tit {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 #filter {
-    display: flex;
-    align-items: center; 
+  display: flex;
+  align-items: center;
 }
 
 #pmaintitle h1 {
-    font-size: 22px;
-    font-weight: bold;
-    color: #000000;
+  font-size: 22px;
+  font-weight: bold;
+  color: #000000;
 }
 
 #pmaintitle h2 {
-    font-size: 16px; 
-    color: #575757;
+  font-size: 16px;
+  color: #575757;
 }
 
 #pmaintitle select {
-    height: 35px;
-    width: 170px;
-    font-size: 16px;
-    padding-left: 10px;
-    color: #8D8D8D;
-    background-color: #fff;
-    border: 2px solid #C6C6C6;
-    outline: none;
-    border-radius: 5px;
-    margin-left: 10px;
+  height: 35px;
+  width: 170px;
+  font-size: 16px;
+  padding-left: 10px;
+  color: #8d8d8d;
+  background-color: #fff;
+  border: 2px solid #c6c6c6;
+  outline: none;
+  border-radius: 5px;
+  margin-left: 10px;
 }
 
 #pmaintable {
-    width: 90%;
-    border: 0px;
-    border-spacing: 0px 10px;
-    margin: 0 auto 0px;
+  width: 90%;
+  border: 0px;
+  border-spacing: 0px 10px;
+  margin: 0 auto 0px;
 }
 
 #pmaintable thead th {
-    font-size: 16px;
-    color: #404040;
-    padding: 0px 5px 5px 20px;
-    border-bottom: 1px solid #707070;
-    width: 180px;
-    height: 50px;
-    text-align: left;
-
+  font-size: 16px;
+  color: #404040;
+  padding: 0px 5px 5px 20px;
+  border-bottom: 1px solid #707070;
+  width: 180px;
+  height: 50px;
+  text-align: left;
 }
 
 #pmaintable tbody tr {
-    font-size: 16px;
-    color: #575757;
-    background-color: #fff;
+  font-size: 16px;
+  color: #575757;
+  background-color: #fff;
 }
 
 #pmaintable tbody td {
-    width: 180px;
-    height: 50px;
-    padding: 5px 20px 5px 20px;
-    text-align: left;
-  }
+  width: 180px;
+  height: 50px;
+  padding: 5px 20px 5px 20px;
+  text-align: left;
+}
 
 #pmaintable tbody td span i {
-    padding-left: 15px;
-    /* text-align: center; */
+  padding-left: 15px;
+  /* text-align: center; */
 }
 
 /* #row {
@@ -123,26 +120,21 @@
     flex-direction: row;
 } */
 
-
 #mainonebtn #btnnewproduct {
-    font-size: 14px;
-    font-weight: 600;
-    text-align: center;
-    display:inline-block;
-    /* font-weight: 600; */
-    width: 180px;
-    height: 45px;
-    background-color: #6d6d6d;
-    color: #fff;
-    border-radius: 5px;
-    border: none;
-    outline: none;
-    position: fixed;
-    right: 60px;
-    bottom: 60px;
-    cursor: pointer;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: center;
+  display: inline-block;
+  /* font-weight: 600; */
+  width: 180px;
+  height: 45px;
+  background-color: #6d6d6d;
+  color: #fff;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  position: fixed;
+  right: 60px;
+  bottom: 60px;
+  cursor: pointer;
 }
-
-
-
-
