--- a/src/assets/styles/DeleteBox.css
+++ b/src/assets/styles/DeleteBox.css
@@ -56,11 +56,11 @@
   color: #576574;
 }
 
-#buttons {
+#delBox-buttons {
   display: flex;
   align-items: center;
   margin-left: auto;
-  margin-right: 40px;
+  margin-right: 60px;
   box-sizing: border-box;
   padding-bottom: 20px;
 }
