ExCalcFP-React-FinInProgress-27

--- a/src/assets/styles/Expenses.css
+++ b/src/assets/styles/Expenses.css
@@ -40,6 +40,10 @@
     padding: 20px auto 20px ; */
 }
 
+.ex-period-btns {
+  /* display: flex; */
+}
+
 #experiod h2 {
   font-size: 16px;
   color: #575757;
