ExCalcFP-React-FinInProgress-28

--- a/src/assets/styles/Expenses.css
+++ b/src/assets/styles/Expenses.css
@@ -40,9 +40,9 @@
     padding: 20px auto 20px ; */
 }
 
-.ex-period-btns {
-  /* display: flex; */
-}
+/* .ex-period-btns {
+  display: flex;
+} */
 
 #experiod h2 {
   font-size: 16px;
@@ -68,7 +68,7 @@
   padding-left: 10px;
   color: #8d8d8d;
   background-color: #fff;
-  border: 2px solid #c6c6c6;
+  border: 1.2px solid #c6c6c6;
   outline: none;
   border-radius: 5px;
   margin-left: 13px;
