--- a/src/assets/styles/Register.css
+++ b/src/assets/styles/Register.css
@@ -1,11 +1,12 @@
 #register {
-    width: 100%;
-    /* height: 100%; */
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    justify-content: center;
-    /* align-items: center; */
-    align-content: center;   
-    flex-wrap: wrap;
-    /* margin-top: 50px; */
+  width: 100%;
+  /* height: 100%; */
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  align-content: center;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
