--- a/src/assets/styles/shared.css
+++ b/src/assets/styles/shared.css
@@ -34,18 +34,23 @@ body {
   /* width: 420px; */
 }
 
+/* input-container */
+.input-container {
+  width: 340px;
+}
+
 /* label */
-.text-field-input {
+.text-label {
   width: 100%;
   font-size: 18px;
   color: #8d8d8d;
-  margin-top: 4px;
+  margin-top: 15px;
   margin-bottom: 6px;
   display: inline-block;
 }
 
 /* input */
-.text-field {
+.text-input {
   width: 100%;
   height: 35px;
   font-size: 15px;
@@ -55,7 +60,8 @@ body {
   border-radius: 5px;
   display: inline-block;
   flex-wrap: wrap;
-  text-align: center;
+  text-align: left;
+  padding-left: 5px;
 }
 
 /* button */
@@ -73,6 +79,7 @@ body {
   border: none;
   outline: none;
   cursor: pointer;
+  padding: 0px;
 }
 
 .additional-info {
