--- a/src/assets/styles/ProLogin.css
+++ b/src/assets/styles/ProLogin.css
@@ -1,11 +1,47 @@
-
 #prologin {
-    width: 100%;
-    height: 100%;
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    justify-content: center;
-    /* align-items: center; */
-    align-content: center;   
-    flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  align-content: center;
+  flex-wrap: wrap;
+}
+
+.input-msg {
+  height: 10px;
+  margin-top: 8px;
+}
+.signin-button {
+  width: 340px;
+  height: 50px;
+  font-size: 18px;
+  font-weight: 600;
+  color: #fff;
+  background-color: #1dd1a1;
+  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.17);
+  border-radius: 5px;
+  margin-top: 12px;
+  display: inline-block;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 0px;
+}
+.input-icons {
+  width: 100%;
+  margin-bottom: 10px;
+  position: relative;
+}
+.input-icons i {
+  position: absolute;
+  top: 127px;
+  left: 280px;
+}
+.icon {
+  padding: 10px;
+  min-width: 40px;
+  /* text-align: center; */
+  text-align: right;
 }
