--- a/src/assets/styles/Register.css
+++ b/src/assets/styles/Register.css
@@ -10,3 +10,20 @@
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+.reg-input-icons {
+  width: 100%;
+  margin-bottom: 10px;
+  position: relative;
+}
+.reg-input-icons i {
+  position: absolute;
+  top: 292px;
+  left: 280px;
+}
+.reg-icon {
+  padding: 10px;
+  min-width: 40px;
+  /* text-align: center; */
+  text-align: right;
+}
