--- a/src/assets/styles/ProLogin.css
+++ b/src/assets/styles/ProLogin.css
@@ -9,12 +9,8 @@
   flex-wrap: wrap;
 }
 
-.input-msg {
-  height: 10px;
-  margin-top: 8px;
-}
 .signin-button {
-  width: 340px;
+  width: 348px;
   height: 50px;
   font-size: 18px;
   font-weight: 600;
@@ -44,4 +40,15 @@
   min-width: 40px;
   /* text-align: center; */
   text-align: right;
+}
+
+.input-msg {
+  height: 10px;
+  margin-top: 12px;
+}
+
+#alert-msg {
+  padding: 0px;
+  color: red;
+  text-align: center;
 }
