--- a/src/assets/styles/ProLogin.css
+++ b/src/assets/styles/ProLogin.css
@@ -33,13 +33,14 @@
 .input-icons i {
   position: absolute;
   top: 127px;
-  left: 280px;
+  left: 300px;
 }
 .icon {
   padding: 10px;
-  min-width: 40px;
+  /* min-width: 40px; */
   /* text-align: center; */
   text-align: right;
+  cursor: pointer;
 }
 
 .input-msg {
