--- a/src/assets/styles/Register.css
+++ b/src/assets/styles/Register.css
@@ -19,11 +19,12 @@
 .reg-input-icons i {
   position: absolute;
   top: 292px;
-  left: 280px;
+  left: 300px;
 }
 .reg-icon {
   padding: 10px;
-  min-width: 40px;
+  /* min-width: 40px; */
   /* text-align: center; */
   text-align: right;
+  cursor: pointer;
 }
