ExCalcFP-React-FinInProgress-36

--- a/src/assets/styles/Expenses.css
+++ b/src/assets/styles/Expenses.css
@@ -59,7 +59,7 @@
     background-color: red; */
 }
 
-#experiod #select {
+#experiod .ex-select {
   display: flex;
   align-items: center;
   height: 35px;
