--- a/src/assets/styles/SignOut.css
+++ b/src/assets/styles/SignOut.css
@@ -29,7 +29,7 @@
   position: fixed;
   width: 450px;
   /* height: 225px; */
-  height: 250px;
+  height: 270px;
   box-sizing: border-box;
   background-color: #fff;
   display: flex;
@@ -61,6 +61,7 @@
 #btns {
   display: flex;
   align-items: center;
+  /* width: 100%; */
   margin-left: auto;
   margin-right: 65px;
   box-sizing: border-box;
@@ -71,6 +72,7 @@
 #sodelete {
   font-size: 15px;
   font-weight: 600;
+  /* width: 110px; */
   color: #576574;
   background-color: #fff;
   border: none;
@@ -92,7 +94,8 @@
   width: 60px;
   height: 60px;
   border-radius: 50px;
-  margin: 18px auto 0px;
+  /* margin: 18px auto 0px; */
+  margin: 32px auto 0px;
   /* margin-right: 10px; */
   /* margin-left: auto; */
 }
