--- a/src/assets/styles/UpdateUser.css
+++ b/src/assets/styles/UpdateUser.css
@@ -96,16 +96,16 @@
       align-content: center; */
 }
 
-.ep-button {
+.eu-button {
   width: 180px;
-  height: 50px;
+  height: 40px;
   font-size: 15px;
   font-weight: 600;
   color: #fff;
   background-color: #1dd1a1;
   box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.17);
   border-radius: 5px;
-  margin-top: 40px;
+  margin-top: 20px;
   display: inline-block;
   border: none;
   outline: none;
@@ -114,16 +114,33 @@
   margin-right: 18px;
 }
 
-.epcl-button {
+.eu-cl-button {
   width: 180px;
-  height: 50px;
+  height: 40px;
   font-size: 15px;
   font-weight: 600;
   color: #fff;
   background-color: #6d6d6d;
   box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.17);
   border-radius: 5px;
-  margin-top: 40px;
+  margin-top: 20px;
+  display: inline-block;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 0px;
+}
+
+#delete-user-btn {
+  margin: 20px 0px 20px 0px;
+  width: 378px;
+  height: 40px;
+  font-size: 15px;
+  font-weight: 600;
+  color: #fff;
+  background-color: rgb(209, 37, 37);
+  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.17);
+  border-radius: 5px;
   display: inline-block;
   border: none;
   outline: none;
