--- a/src/assets/styles/DeleteUser.css
+++ b/src/assets/styles/DeleteUser.css
@@ -66,7 +66,7 @@
   margin-left: auto;
   margin-right: 45px;
   box-sizing: border-box;
-  padding-bottom: 20px;
+  /* padding-bottom: 20px; */
 }
 
 #delbox #cancel,
