--- a/src/assets/styles/Navbar.css
+++ b/src/assets/styles/Navbar.css
@@ -9,8 +9,8 @@
   top: 0;
   background: #fff;
   box-sizing: border-box;
-  border-top: solid 1px grey;
-  border-bottom: solid 1px grey;
+  border-top: solid 0.5px rgba(128, 128, 128, 0.541);
+  border-bottom: solid 0.5px rgba(128, 128, 128, 0.541);
 }
 
 /* #mainnav  {
