--- a/src/assets/styles/ProLogin.css
+++ b/src/assets/styles/ProLogin.css
@@ -43,12 +43,9 @@
   cursor: pointer;
 }
 
-.input-msg {
-  height: 10px;
-  margin-top: 12px;
-}
-
 #alert-msg {
+  height: 10px;
+  margin: 10.5px 0px 10.5px 0px;
   padding: 0px;
   color: red;
   text-align: center;
