--- a/src/assets/styles/ProductsNew.css
+++ b/src/assets/styles/ProductsNew.css
@@ -88,6 +88,16 @@
   white-space: nowrap;
 }
 
+/* select:focus */
+#pmaintitle option:focus {
+  /* background-color: #fff; */
+  /* outline: none; */
+  /* border: none;
+  box-shadow: none; */
+  border: 0px;
+  outline: 0px;
+}
+
 #pmaintable {
   width: 90%;
   border: 0px;
