--- a/src/assets/styles/SignOut.css
+++ b/src/assets/styles/SignOut.css
@@ -9,14 +9,14 @@
 }
 
 #so-dd-box {
-  position: fixed;
-  top: 50;
-  /* position: absolute; */
+  /* position: fixed; */
+  /* top: 50;
+  position: absolute; */
+  height: 320px;
   width: auto;
   padding: 0px 20px 0px 20px;
   box-shadow: 0px 0px 2px 0.1px #88888991;
   /* height: 225px; */
-  height: 320px;
   box-sizing: border-box;
   background-color: #fff;
   display: flex;
@@ -56,10 +56,9 @@
   /* padding-bottom: 20px; */
 }
 
-#so-dd-box #so-cancel,
+/* #so-dd-box #so-cancel,
 #so-signout {
   font-size: 15px;
-  /* font-weight: 500; */
   width: 115px;
   color: #576574;
   background-color: #fff;
@@ -69,13 +68,35 @@
   border-radius: 2px;
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.24);
   cursor: pointer;
-}
-#so-dd-box #so-signout {
+} */
+
+/* #so-dd-box #so-signout {
   background-color: #576574;
   color: #fff;
   margin-left: 10px;
-  /* font-weight: 500; */
+  top: 65;
+  right: 20;
+  font-weight: 500;
+} */
+
+#so-dd-box #so-signout {
+  font-size: 15px;
+  width: 240px;
+  height: 30px;
+  color: #576574;
+  background-color: #fff;
+  border: none;
+  outline: none;
+  padding: 6px 0px 6px 0px;
+  border-radius: 2px;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.24);
+  cursor: pointer;
 }
+#so-dd-box #so-signout:hover {
+  color: #fff;
+  background-color: #576574;
+}
+
 #so-userS {
   width: 100%;
   border-bottom: 1px solid rgb(190, 183, 183);
@@ -122,11 +143,19 @@
   /* text-align: center; */
   width: 240px;
   height: 30px;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.24);
   font-size: 16px;
   cursor: pointer;
-  background-color: rgb(50, 103, 216);
+  background-color: #fff;
+  color: #576574;
   border-radius: 3px;
   border: none;
   outline: none;
-  color: white;
+  /* color: white; */
+}
+#edUser:hover {
+  /* background-color: rgb(6, 54, 156); */
+  /* background-color: rgb(50, 103, 216); */
+  color: #fff;
+  background-color: #576574;
 }
