--- a/src/assets/styles/Navbar.css
+++ b/src/assets/styles/Navbar.css
@@ -112,13 +112,17 @@
 }
 
 #user h3 {
-  font-size: 18px;
+  font-size: 16px;
   /* color: #576574; */
+  font-weight: 500;
   margin-left: 15px;
   margin-bottom: 0px;
   margin-top: 0px;
   /* margin-right: 30px; */
   white-space: nowrap;
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 5px;
 }
 
 #touch {
