--- a/src/assets/styles/shared.css
+++ b/src/assets/styles/shared.css
@@ -15,7 +15,7 @@ body {
 
 #app {
   width: 100%;
-  height: 100;
+  height: 100%;
   /* display: flex;
     align-content: center;
     justify-content: center; */
